Replaced placeholder with actual assets (Enemy Mob AI); Added more features to Mob animation controller. Added creature_character scene to display creatures.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,7 +64,9 @@
     <Compile Include="Assets\AI COMBAT ASSETS\scripts\Enemy\CrocEnemyMono.cs" />
     <Compile Include="Assets\AI COMBAT ASSETS\scripts\Enemy\EnemyAI.cs" />
     <Compile Include="Assets\AI COMBAT ASSETS\scripts\EnemyAttackHitbox.cs" />
+    <Compile Include="Assets\DeathState.cs" />
     <Compile Include="Assets\EnemyChasePlayer.cs" />
+    <Compile Include="Assets\LickWeaponState.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>C:/Users/Spidakid/Documents/ReposGit/BOTM/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
