FSM update; boss hit box

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -9,7 +9,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{C90257F3-E1F9-E7C4-6D1A-7015FAA120B7}</ProjectGuid>
+    <ProjectGuid>{29A0D6FD-BE6C-0CCA-E936-CA2268B7EF55}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -60,27 +60,28 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\AI COMBAT ASSETS\scripts\BossAttackHitbox.cs" />
     <Compile Include="Assets\AI COMBAT ASSETS\scripts\Enemy\CrocEnemy.cs" />
     <Compile Include="Assets\AI COMBAT ASSETS\scripts\Enemy\CrocEnemyMono.cs" />
     <Compile Include="Assets\AI COMBAT ASSETS\scripts\Enemy\EnemyAI.cs" />
-    <Compile Include="Assets\AI COMBAT ASSETS\scripts\EnemyAttackHitbox.cs" />
+    <Compile Include="Assets\AI COMBAT ASSETS\scripts\MobAttackHitbox.cs" />
     <Compile Include="Assets\DeathState.cs" />
     <Compile Include="Assets\EnemyChasePlayer.cs" />
     <Compile Include="Assets\LickWeaponState.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:/Users/lavance.strickland/Desktop/BOTM/BOTM-Zim/BOTM-Zim/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>C:/Users/lavance.strickland/Desktop/BOTM/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PackageManagerUI.Editor">
-      <HintPath>C:/Users/lavance.strickland/Desktop/BOTM/BOTM-Zim/BOTM-Zim/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+      <HintPath>C:/Users/lavance.strickland/Desktop/BOTM/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>C:/Users/lavance.strickland/Desktop/BOTM/BOTM-Zim/BOTM-Zim/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>C:/Users/lavance.strickland/Desktop/BOTM/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:/Users/lavance.strickland/Desktop/BOTM/BOTM-Zim/BOTM-Zim/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>C:/Users/lavance.strickland/Desktop/BOTM/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.DataPrivacy">
-      <HintPath>C:/Users/lavance.strickland/Desktop/BOTM/BOTM-Zim/BOTM-Zim/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+      <HintPath>C:/Users/lavance.strickland/Desktop/BOTM/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -284,13 +285,13 @@
       <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Editor">
-      <HintPath>C:/Users/lavance.strickland/Desktop/BOTM/BOTM-Zim/BOTM-Zim/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Editor.dll</HintPath>
+      <HintPath>C:/Users/lavance.strickland/Desktop/BOTM/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.StandardEvents">
-      <HintPath>C:/Users/lavance.strickland/Desktop/BOTM/BOTM-Zim/BOTM-Zim/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.StandardEvents.dll</HintPath>
+      <HintPath>C:/Users/lavance.strickland/Desktop/BOTM/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Tracker">
-      <HintPath>C:/Users/lavance.strickland/Desktop/BOTM/BOTM-Zim/BOTM-Zim/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Tracker.dll</HintPath>
+      <HintPath>C:/Users/lavance.strickland/Desktop/BOTM/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:/Program Files/Unity/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
