--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,7 +68,9 @@
     <Compile Include="Assets\AI COMBAT ASSETS\scripts\Hitbox\MobAttackHitbox.cs" />
     <Compile Include="Assets\AI COMBAT ASSETS\scripts\Utility\FieldOfView.cs" />
     <Compile Include="Assets\AttackPlayer.cs" />
+    <Compile Include="Assets\Boss_Charge.cs" />
     <Compile Include="Assets\Boss_JumpBack.cs" />
+    <Compile Include="Assets\Boss_Strafe.cs" />
     <Compile Include="Assets\BossAI.cs" />
     <Compile Include="Assets\ChasePlayer.cs" />
     <Compile Include="Assets\Cinemachine\Base\Runtime\Behaviours\CinemachineBlendListCamera.cs" />
@@ -183,6 +185,12 @@
     <None Include="Assets\Art\EnvironmentAssets\Modular Machinery\Naming_Convention.txt" />
     <None Include="Assets\Art\EnvironmentAssets\Terrain\Naming_Convention.txt" />
     <None Include="Assets\Allegorithmic\Plugins\EULA.txt" />
+    <Reference Include="Unity.RenderPipelines.Core.Editor">
+      <HintPath>C:/Users/bernardjohn.paner/Desktop/BOTM/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.Core.Runtime">
+      <HintPath>C:/Users/bernardjohn.paner/Desktop/BOTM/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Runtime.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>C:/Users/bernardjohn.paner/Desktop/BOTM/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
@@ -191,18 +199,6 @@
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
       <HintPath>C:/Users/bernardjohn.paner/Desktop/BOTM/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:/Users/bernardjohn.paner/Desktop/BOTM/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Analytics.DataPrivacy">
-      <HintPath>C:/Users/bernardjohn.paner/Desktop/BOTM/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.Core.Editor">
-      <HintPath>C:/Users/bernardjohn.paner/Desktop/BOTM/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.Core.Runtime">
-      <HintPath>C:/Users/bernardjohn.paner/Desktop/BOTM/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.HighDefinition.Runtime">
       <HintPath>C:/Users/bernardjohn.paner/Desktop/BOTM/Library/ScriptAssemblies/Unity.RenderPipelines.HighDefinition.Runtime.dll</HintPath>
@@ -221,6 +217,12 @@
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.ShaderLibrary">
       <HintPath>C:/Users/bernardjohn.paner/Desktop/BOTM/Library/ScriptAssemblies/Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.TextMeshPro">
+      <HintPath>C:/Users/bernardjohn.paner/Desktop/BOTM/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Analytics.DataPrivacy">
+      <HintPath>C:/Users/bernardjohn.paner/Desktop/BOTM/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
