--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\AI COMBAT ASSETS\scripts\Hitbox\MobAttackHitbox.cs" />
     <Compile Include="Assets\AI COMBAT ASSETS\scripts\Utility\FieldOfView.cs" />
     <Compile Include="Assets\AttackPlayer.cs" />
+    <Compile Include="Assets\Boss_WalkForward.cs" />
     <Compile Include="Assets\ChasePlayer.cs" />
     <Compile Include="Assets\Cinemachine\Base\Runtime\Behaviours\CinemachineBlendListCamera.cs" />
     <Compile Include="Assets\Cinemachine\Base\Runtime\Behaviours\CinemachineBrain.cs" />
